--- a/Student_Management_System/Student_Management_System.csproj
+++ b/Student_Management_System/Student_Management_System.csproj
@@ -80,6 +80,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Student.cs" />
+    <Compile Include="studentlist.cs" />
     <Compile Include="StudentListForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -117,9 +118,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="images\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
