--- a/Student_Management_System/Student_Management_System.csproj
+++ b/Student_Management_System/Student_Management_System.csproj
@@ -25,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,6 +35,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MySql.Data, Version=8.0.21.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
@@ -53,12 +55,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Course.cs" />
+    <Compile Include="Model\CourseTable.cs" />
+    <Compile Include="Model\IDatabaseTable.cs" />
+    <Compile Include="ViewController\AddCourseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewController\AddCourseForm.Designer.cs">
+      <DependentUpon>AddCourseForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddStudentsForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="AddStudentsForm.Designer.cs">
       <DependentUpon>AddStudentsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presenter\AddCoursePresenter.cs" />
     <Compile Include="DatabaseConnection.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
@@ -87,6 +99,10 @@
     <Compile Include="StudentListForm.Designer.cs">
       <DependentUpon>StudentListForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewController\IAddCourseFormView.cs" />
+    <EmbeddedResource Include="ViewController\AddCourseForm.resx">
+      <DependentUpon>AddCourseForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddStudentsForm.resx">
       <DependentUpon>AddStudentsForm.cs</DependentUpon>
     </EmbeddedResource>
